# mouseadmin

./: .gitignore  README.md  app.py  backfill.js  backfill.json  backfill.py  mouseadmin.service  mouseadmin_service.sh  package-lock.json  puppeteer-test.js  pyproject.toml  requirements.txt  review.html  schema.sql  test.fish  todo.org
migrations/: 001.sql
scripts/: deploy-to-pi.sh  deploy.sh  prod-to-local.sh  run_local.fish  update_dates.py
src/mouseadmin/: app.py  file_client.py  neocities.py
src/mouseadmin/static/: page.css
src/mouseadmin/templates/: edit_entry.html  edit_template.html  home.html  index.html  review.html  review_edit.html  review_list.html  template.html  templates_list.html
templates/: home.html  review.html
